--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
 EasyProcess==0.2.5
-idna==2.8
+idna==2.8pip
 PyVirtualDisplay==0.2.1
 requests==2.21.0
 selenium==3.141.0
 soupsieve==1.9.1
 urllib3==1.24.2
 PyMySQL==0.10.1
+psycopg2==2.9.1
